Important changes since GBBopen 1.1:

  * None yet


Important changes in GBBopen 1.1:

  * New :gbbopen-tools functions and macros
     - DECF/DELETE-ACONS
     - DEFCM
     - PARSE-DATE

  * New :portable-threads macro
     - WITHOUT-LOCK-HELD

  * New :gbbopen-core functions
     - CHANGE-SPACE-INSTANCE
     - INITIAL-CLASS-INSTANCE-NUMBER
     - MAKE-DUPLICATED-INSTANCE
     - UNDUPLICATED-SLOT-NAMES

  * New class options in DEFINE-UNIT-CLASS, DEFINE-SPACE-CLASS, 
    DEFINE-KS-CLASS, and DEFINE-KSA-CLASS
     - :ESTIMATED-INSTANCES
     - :USE-GLOBAL-INSTANCE-NAME-COUNTER

  * New :SIZE option for a hashed-storage specification to
    MAKE-SPACE-INSTANCE

  * CLASS-DIRECT-METHODS removed from MOP interface (use 
    SPECIALIZER-DIRECT-METHODS instead)


Important changes in GBBopen 1.0:
  
  * Support added for set-composite dimension values and space-instance
    storage of them; support for incomposite (scalar) pattern retrieval of
    set-composite unit instances

  * Added processing of <install-dir>/shared-gbbopen-modules (processed 
    immediately before user's personal <homedir>/gbbopen-modules)

  * Added system-name tagging of extended-REPL commands, directory
    definitions, and module definitions
     - New WITH-SYSTEM-NAME macro added to support this

  * Changes to extended-REPL commands:
     - DEFINE-TLL-COMMAND renamed to DEFINE-REPL-COMMAND
     - New built-in extended-REPL commands:
        :systems  Shows all system-names used in commands, directory 
                  definitions, and module definitions
        :commands [<system-name>] 
                  Shows all extended-REPL commands; if system-name is
                  specified, then only those commands are displayed
        :undefine-system <system-name>
                  Removes all commands, directory definitions, and 
                  module definitions associated with <system-name>

  * Changes to Mini Module system: