@@ -36,6 +36,6 @@
 <li><a href="tutorial-index.html">Index</a></li>
 </ul>
 <hr /><address><a target="_top" class="address"
-    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;June 15, 2008</nobr>
-<nobr>20:38&nbsp;EDT</nobr></address><br />
+    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;June 17, 2008</nobr>
+<nobr>15:54&nbsp;EDT</nobr></address><br />
 </body></html>
